--- a/Leadpage.html
+++ b/Leadpage.html
@@ -19,11 +19,16 @@
 <body class="col-xl-12">
 
     <header>
-        <div class="container">
-            <!--    https://www.carsbase.com/photo/Hamann-BMW_M6_mp138_pic_56951.jpg-->
+        <div class="containerA">
+          <span class="text1" style="font-size:2.5vw;">WEB DEVELOPER & PROGRAMMER</span>
+          <span class="text2" style="font-size:1.5vw;">JAMIE M. MACMILLAN</span>
+           
+        </div>
 
-            <div id="welcome" class="col-sm-2" style="font-size:2.5vw;">WEB DEVELOPER & PROGRAMMER</div>
-            <div id="welcome2" style="font-size:1.5vw;">JAMIE M. MACMILLAN</div>
+        <div class="container">
+            
+            <!--<div id="welcome" class="col-sm-2" style="font-size:2.5vw;">WEB DEVELOPER & PROGRAMMER</div>
+            <div id="welcome2" style="font-size:1.5vw;">JAMIE M. MACMILLAN</div>-->
             <img src="https://images.unsplash.com/photo-1511376777868-611b54f68947?ixlib=rb-0.3.5&s=6ecad22c1f1ce131f7d935e106076f5e&auto=format&fit=crop&w=1350&q=80"
                 alt="" id="leadPageImage">
             <div id="welcomeMsg" style="font-size:1.5vw;">Need a Website or Blog for your start up company? Let me help create & build it for you
@@ -31,17 +36,17 @@
             </div>
             <img src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-5/256/navigate-down-icon.png" alt "" id="enterSiteArrow">
             <button type "button" class="btn btn-primary" style="font-size:1vw;">
-                <a href="http://127.0.0.1:5500/Mainpage.html">learn more here</a>
+                <a href="http://127.0.0.1:5500/Mainpage.html" target="_blank" style="font-size:1vw;">Learn More Here</a>
             </button>
-            <div class="flex-container" style="font-size:1.5vw;">
+            <div class="flex-container">
                 <div style="font-size:1.2vw;">
-                    <a href="http://127.0.0.1:5500/Mainpage.html">Home</a>
+                    <a href="http://127.0.0.1:5500/Mainpage.html" style="font-size:1.2vw;">Home</a>
                 </div>
                 <div style="font-size:1.2vw;">
-                    <a href="http://127.0.0.1:5500/Mainpage.html">What I build / develope</a>
+                    <a href="http://127.0.0.1:5500/Mainpage.html" style="font-size:1.2vw;">What I build / develope</a>
                 </div>
                 <div style="font-size:1.2vw;">
-                    <a href="http://127.0.0.1:5500/Mainpage.html">Contact Me</a>
+                    <a href="http://127.0.0.1:5500/Mainpage.html" style="font-size:1.2vw;">Contact Me</a>
                 </div>
             </div>
 
@@ -84,7 +89,7 @@
 
 
     <script type="text/javascript" src="jquery-3.3.1.js"></script>
-    <script type="text/javascript" src="javascript1.js"></script>
+    <script type="text/javascript" src="javascript.js"></script>
 
 
 </body>
