--- a/Leadpage.html
+++ b/Leadpage.html
@@ -43,7 +43,7 @@
                     <a href="http://127.0.0.1:5500/Mainpage.html" style="font-size:1.2vw;">Home</a>
                 </div>
                 <div style="font-size:1.2vw;">
-                    <a href="http://127.0.0.1:5500/Mainpage.html" style="font-size:1.2vw;">What I build / develope</a>
+                    <a href="http://127.0.0.1:5500/Mainpage.html" style="font-size:1.2vw;">What I build & develope</a>
                 </div>
                 <div style="font-size:1.2vw;">
                     <a href="http://127.0.0.1:5500/Mainpage.html" style="font-size:1.2vw;">Contact Me</a>
