--- a/Leadpage.html
+++ b/Leadpage.html
@@ -20,20 +20,19 @@
 
     <header>
         <div class="containerA">
-          <span class="text1" style="font-size:2.5vw;">WEB DEVELOPER & PROGRAMMER</span>
-          <span class="text2" style="font-size:1.5vw;">JAMIE M. MACMILLAN</span>
-           
+            <span class="text1" style="font-size:2.5vw;">WEB DEVELOPER & PROGRAMMER</span>
+            <span class="text2" style="font-size:1.5vw;">JAMIE M. MACMILLAN</span>
+
         </div>
 
         <div class="container">
-            
-            <!--<div id="welcome" class="col-sm-2" style="font-size:2.5vw;">WEB DEVELOPER & PROGRAMMER</div>
-            <div id="welcome2" style="font-size:1.5vw;">JAMIE M. MACMILLAN</div>-->
+
             <img src="/LeadPagePic.jpeg" alt="" id="leadPageImage">
             <div id="welcomeMsg" style="font-size:1.5vw;">Need a Website or Blog for your start up company? Let me help create & build it for you
                 <span id="free"> "Absolutely FREE!!!"</span>
             </div>
-            <img src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-5/256/navigate-down-icon.png" alt "" id="enterSiteArrow" alt "" id="enterSiteArrow">
+            <img src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-5/256/navigate-down-icon.png" alt "" id="enterSiteArrow"
+                alt "" id="enterSiteArrow">
             <button type "button" class="btn btn-primary" style="font-size:1vw;">
                 <a href="http://127.0.0.1:5500/Mainpage.html" target="_blank" style="font-size:1vw;">Learn More Here</a>
             </button>
@@ -53,44 +52,26 @@
                 <div id="shareLabel" style="font-size:1.2vw">share
                     <br> on</div>
                 <div id="twitter">
-                    <img src="/Twitter_Social-Network.png"
-                        alt="" id="twitter">1</div>
+                    <img src="/Twitter_Social-Network.png" alt="" id="twitter">1</div>
                 <div id="facebook">
                     <img src="/facebook_Icon.png" alt="" id="facebook">
                 </div>
                 <div id="instagram">
-                    <img src="/instagram_image.jpeg"
-                        alt="" id="instagram">
+                    <img src="/instagram_image.jpeg" alt="" id="instagram">
                 </div>
                 <div id="linkedIn">
                     <img src="/Linked-In.png" alt="" id="linkedIn">
                 </div>
                 <div id- "google">
-                    <img src="/Google_Social-Network.png"
-                        alt="" id="google">
+                    <img src="/Google_Social-Network.png" alt="" id="google">
                 </div>
             </div>
         </div>
-
-
-
-
     </header>
-
-
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
-    <!-- Include all compiled plugins (below), or include-->
-    <!--individual files as needed -->
-    <!--<script-->
-    <!--src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>-->
-
 
     <script type="text/javascript" src="jquery-3.3.1.js"></script>
     <script type="text/javascript" src="javascript.js"></script>
 
-
 </body>
 
-</html>>
+</html>
