--- a/Leadpage.html
+++ b/Leadpage.html
@@ -34,7 +34,7 @@
             <img src="http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-5/256/navigate-down-icon.png" alt "" id="enterSiteArrow"
                 alt "" id="enterSiteArrow">
             <button type "button" class="btn btn-primary" style="font-size:1vw;">
-                <a href="http://127.0.0.1:5500/Mainpage.html" target="_blank" style="font-size:1vw;">Learn More Here</a>
+                <a href="http://127.0.0.1:5500/Mainpage.html" style="font-size:1vw;">Learn More Here</a>
             </button>
             <div class="flex-container">
                 <div style="font-size:1.2vw;">
