--- a/Mainpage.html
+++ b/Mainpage.html
@@ -87,38 +87,44 @@
     <div class="container1">
 
         <!-- Slideshow container -->
-        <div class="slideshow-container">
+     -  <div class="slideshow-container">
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
                 <div class="numbertext">1 / 5</div>
                 <img id="sliderImage1" src="/business-code-coding-943096.jpg" style="width:100%">
-                <div class="text1">Caption Text</div>
+                <div class="text1"><div id="image1Text">WELCOME</div><br id="imageText2">Here you will find<span id="text1Span"> "Website solutions" </span>to solve your needs.</div>
             </div>
 
-            <div class="mySlides fade">
+          <div class="mySlides fade">
                 <div class="numbertext">2 / 5</div>
                 <img id="sliderImage1" src="/lukas-blazek-367945-unsplash.jpg" style="width:100%">
-                <div class="text2">Caption Two</div>
+                <div class="text2"><div id="image2Text">WHAT I BUILD & DEVELOPE</div><br id="imageText2">Responsive Brochure website (Non editable).<BR>Dynamic website allowing for more user engagement (login areas etc.)<BR>E-commerce website with online payment capabilities.<br>Progressive web Applications<br>Mobile Apps.</div>
             </div>
+            
 
             <div class="mySlides fade">
                 <div class="numbertext">3 / 5</div>
                 <img id="sliderImage1" src="/william-iven-5895-unsplash.jpg" style="width:100%">
-                <div class="text3">Caption Three</div>
+                <div class="text3"><a href="#freeWeb" class="text3">Request your <span>"FREE WEBSITE" </span> here<br>&<br> review customer testimonials</a></div>
             </div>
 
-            <div class="mySlides fade">
+           <div class="mySlides fade">
                 <div class="numbertext">4 / 5</div>
                 <img id="sliderImage1" src="/farzad-nazifi-71686-unsplash (1).jpg" style="width:100%">
-                <div class="text4">Caption Four</div>
+                <div class="text4"><a href="#portfolio"class="text4">See<span id="text4Span"> MY PORTFOLIO</span> to review projects I have completed<br> & projects I am now building</a> </div>
             </div>
 
-            <div class="mySlides fade">
+          <div class="mySlides fade">
                 <div class="numbertext">5 / 5</div>
                 <img  id="sliderImage1" src="/LeadPagePic.jpeg"
                 style="width:100%">
-                <div class="text5">Caption Five</div>
-            </div>            
+                <div class="text5"><a href="#about-contactInfo" class="text5">Learn more about me HERE</a></div>
+            </div>
+            
+        <!--    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>-->
+
+
         </div>
         <br>
         <!-- The dots/circles -->
@@ -213,7 +219,7 @@
                 <span id="headingWIb">Brochure Websites (Non-editable)</span>
                 <br>
                 <br>
-                <br>This is a computer</div>
+                <br>This kind of Website is generally used to display your companies products with the use of graphic images, photographs & provides written content describing your companies product our services, to also include your comapnies contact information. These website are very rarely updated.</div>
             <div id="webImages">
                 <img src="/anete-lusina-609857-unsplash.jpg" id="image1">
                 <span id="headingWIb">Dynamic Websites (Editable)</span>
