--- a/Mainpage.html
+++ b/Mainpage.html
@@ -225,7 +225,7 @@
                 <span id="headingWIb">Dynamic Websites (Editable)</span>
                 <br>
                 <br>
-                <br>This is a computer</div>
+                <br>These Websites give your company the additional capability of capturing customer information . You will also be able to create customer accounts ect. These site are editable using Content Managemnet Systems (CMS).</div>
             <div id="webImages">
                 <img src="/annie-spratt-473660-unsplash.jpg" id="image1">
                 <span id="headingWIb">E-Commerce Websites</span>
